졸라 힘들었따! 전투는 이정도면 soso